Issue#SB-18775 UI - rtl alignment issues toc, profile, search list view more page (refer the attachments)

--- a/src/client/src/assets/styles/components/_video.scss
+++ b/src/client/src/assets/styles/components/_video.scss
@@ -10,6 +10,14 @@
       padding: calculateRem(8px);
     }
 
+    &__information{
+      margin-left:calculateRem(8px);
+      html[dir="rtl"] & {
+        margin-left:inherit;
+        margin-right: calculateRem(8px)inherit;
+      }
+    }
+
     &__title {
       font-weight: bold;
       color: var(--primary-400);
